# playKG

./: .env  .gitignore  README.md  SEC.ipynb  SEC_playground.ipynb  app_gradio.py  docker-compose.yml  friends.ipynb  friends_playground.ipynb  friends_playground_driver.ipynb  frontend.py  helper_folium.py  helper_leaflet.py  helper_neo4j.py  helper_ollama.py  load_friends.py  load_friends_graph.py  main.py  neo4j_hello_world.ipynb  neo4j_hello_world.py  neo4j_locations_map_folium.html  neo4j_locations_map_leaflet.html  neo4j_playground.ipynb  neo4j_playground_SEC.ipynb  neo4j_playground_SEC_langchain.ipynb  neo4j_playground_friends.ipynb  neo4j_playground_friends_driver.ipynb  neo4j_playground_friends_langchain.ipynb  neo4j_playground_langchain.ipynb  neo4j_service.py  play_SEC.ipynb  play_friends.ipynb  prompts.py  pyproject.toml  queries.yaml  queries_SEC.yaml  queries_friends.yaml  query_friends.py  query_friends_graph.py  show_schema.py  (+1 more)
data/friends/: friends.json  friends_map_folium.html  friends_map_leaflet.html  queries_friends.yaml
helpers/: helper_folium.py  helper_leaflet.py  helper_neo4j.py  helper_ollama.py
